--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -116,7 +116,7 @@
                 <div class="trades-container">
                     <div class="section-header">
                         <h3><i class="fas fa-history"></i> Recent Trades</h3>
-                        <button class="refresh-btn" onclick="refreshTrades()">
+                        <button class="refresh-btn" onclick="refreshTrades()" title="Refresh trades data">
                             <i class="fas fa-sync-alt"></i>
                         </button>
                     </div>
@@ -158,7 +158,7 @@
             <div class="notifications-panel" id="notifications-panel">
                 <div class="notifications-header">
                     <h4><i class="fas fa-bell"></i> Notifications</h4>
-                    <button class="close-notifications" onclick="toggleNotifications()">
+                    <button class="close-notifications" onclick="toggleNotifications()" title="Close notifications panel">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
@@ -174,7 +174,7 @@
                 <i class="fas fa-bell"></i>
                 <span class="notification-badge" id="notification-badge">0</span>
             </button>
-            <button class="mobile-btn" onclick="refreshAllData()">
+            <button class="mobile-btn" onclick="refreshAllData()" title="Refresh all data">
                 <i class="fas fa-sync-alt"></i>
             </button>
         </div>
